fixed sonar